--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -1334,83 +1334,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dvirs\\anaconda3\\envs\\iml.env\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\dvirs\\anaconda3\\envs\\iml.env\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n",
+      "  after removing the cwd from sys.path.\n",
       "C:\\Users\\dvirs\\anaconda3\\envs\\iml.env\\lib\\site-packages\\pandas\\core\\indexing.py:1817: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self._setitem_single_column(loc, value, pi)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 game   ply  move   contributor  adversary  color  \\\n",
-      "1                 0.0   2.0  f2f4  leela10b2500  stockfish  white   \n",
-      "2                 0.0   4.0  c3d5  leela10b2500  stockfish  white   \n",
-      "4                 0.0   8.0  c1d2  leela10b2500  stockfish  white   \n",
-      "6                 0.0  12.0  e2f3  leela10b2500  stockfish  white   \n",
-      "8                 0.0  16.0  a1c1  leela10b2500  stockfish  white   \n",
-      "...               ...   ...   ...           ...        ...    ...   \n",
-      "343002        12931.0  55.0  g4g5  leela10b2500  stockfish  black   \n",
-      "343009        12931.0  69.0  g7g5      maia1200  stockfish  black   \n",
-      "343010        12931.0  71.0  e6f4      maia1200  stockfish  black   \n",
-      "343015        12931.0  81.0  h5h4      maia1200  stockfish  black   \n",
-      "maia_percent     40.0  40.0  40.0          40.0       40.0   40.0   \n",
-      "\n",
-      "                                                       position     result  \\\n",
-      "1             rq2k2r/p2p1ppp/1pbbpn2/8/2P1P3/P1N5/1PQ1BPPP/R...       lose   \n",
-      "2             rq2k2r/p2p1ppp/1pbb1n2/4p3/2P1PP2/P1N5/1PQ1B1P...       lose   \n",
-      "4             rq2k2r/p2p1ppp/1p1b1n2/3P4/4Pp2/P7/1PQ1B1PP/R1...       lose   \n",
-      "6             rq3rk1/p2p1ppp/1p3n2/3Pb3/4Pp2/P1B5/1PQ1B1PP/R...       lose   \n",
-      "8             rqr3k1/p4ppp/1p1p1n2/3Pb3/4Pp2/P1BQ1B2/1P4PP/R...       lose   \n",
-      "...                                                         ...        ...   \n",
-      "343002          6k1/3N1pp1/4n2p/2p5/6r1/2R5/5P1P/5K2 b - - 1 28        win   \n",
-      "343009                8/5pp1/3Nnk1p/2p5/4K3/8/5P1P/8 b - - 6 35        win   \n",
-      "343010                8/5p2/3Nnk1p/2pK2p1/8/8/5P1P/8 b - - 1 36        win   \n",
-      "343015               8/5p2/4n1k1/2pK2pp/2N5/8/5P1P/8 b - - 5 41        win   \n",
-      "maia_percent                                          33.333333  33.333333   \n",
-      "\n",
-      "             maia1200_move  maia1200_eval  maia1200_conf leela10b2500_move  \\\n",
-      "1                     g2g3       0.220000       1.000000              f2f4   \n",
-      "2                     f4f5       0.520000       1.000000              c3d5   \n",
-      "4                     c1f4       0.100000       1.000000              c1d2   \n",
-      "6                     c3e5       0.080000       1.000000              e2f3   \n",
-      "8                     c3e5       0.260000       0.800000              a1c1   \n",
-      "...                    ...            ...            ...               ...   \n",
-      "343002                c5c4       0.640000       1.000000              g4g5   \n",
-      "343009                g7g5       0.960000       1.000000              h6h5   \n",
-      "343010                e6f4       1.000000       1.000000              h6h5   \n",
-      "343015                h5h4       1.000000       0.600000              g6f6   \n",
-      "maia_percent     33.333333      33.333333      33.333333         33.333333   \n",
-      "\n",
-      "              leela10b2500_eval  leela10b2500_conf  maia_percent  \n",
-      "1                      0.480000           1.000000     30.303030  \n",
-      "2                      0.540000           0.800000     31.250000  \n",
-      "4                      0.400000           1.000000     32.258065  \n",
-      "6                      0.620000           0.800000     33.333333  \n",
-      "8                      0.520000           1.000000     34.482759  \n",
-      "...                         ...                ...           ...  \n",
-      "343002                 0.920000           1.000000    100.000000  \n",
-      "343009                 0.880000           0.800000    100.000000  \n",
-      "343010                 0.980000           0.600000    100.000000  \n",
-      "343015                 0.960000           0.400000    100.000000  \n",
-      "maia_percent          33.333333          33.333333     33.333333  \n",
-      "\n",
-      "[88765 rows x 15 columns]\n"
      ]
     }
    ],
