--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -669,6 +669,41 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [],
+   "source": [
+    "def calculate_mean_of_board_feats(df):\n",
+    "    vector_list = []\n",
+    "    for position in df['position']:\n",
+    "        board_feat_instance = board_features(position)\n",
+    "        extracted_vector = board_feat_instance.extract()\n",
+    "        vector_list.append(extracted_vector)\n",
+    "\n",
+    "    vector_array = np.array(vector_list)\n",
+    "    mean_vector = np.mean(vector_array, axis=0)\n",
+    "    return mean_vector"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "maia_df['eval_diff'] = maia_df['maia1200_eval'] - maia_df['leela10b2500_eval']\n",
+    "top_maia_samples = maia_df.nlargest(1000, 'eval_diff')\n",
+    "leela_df['eval_diff'] = leela_df['leela10b2500_eval'] - leela_df['maia1200_eval']\n",
+    "top_leela_samples = leela_df.nlargest(1000, 'eval_diff')\n",
+    "top_mean_vec_maia = calculate_mean_of_board_feats(top_maia_samples)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Now, we'll check the move properties in disagreements, when Maia's move is better, and when Leela's move is better."
@@ -758,8 +793,6 @@
     "vector_array_diss_leela = np.array(move_feats_diss_leela)\n",
     "mean_vector_diss_leela = np.mean(vector_array_diss_leela, axis=0)\n",
     "variance_vector_diss_leela = np.var(vector_array_diss_leela, axis=0)\n",
-    "feature_names = {0: \"distance\", 1: \"king approach\", 2: \"advance/ retreat\", 3: \"flanking\", 4: \"pawn\", 5: \"rook\",\n",
-    "                 6: \"knight\", 7: \"bishop\", 8: \"queen\", 9: \"king\", 10: \"check\", 11: \"capture\", 12: \"castle\"}\n",
     "print(\"Leela's move features in disagreements:\")\n",
     "for i, (mean, var) in enumerate(zip(mean_vector_diss_leela, variance_vector_diss_leela)):\n",
     "    feature_name = feature_names.get(i, f\"Feature {i}\")\n",
@@ -802,8 +835,6 @@
     "vector_array_maia = np.array(move_feats_maia)\n",
     "mean_vector_maia = np.mean(vector_array_maia, axis=0)\n",
     "variance_vector_maia = np.var(vector_array_maia, axis=0)\n",
-    "feature_names = {0: \"distance\", 1: \"king approach\", 2: \"advance/ retreat\", 3: \"flanking\", 4: \"pawn\", 5: \"rook\",\n",
-    "                      6: \"knight\", 7: \"bishop\", 8: \"queen\", 9: \"king\", 10: \"check\", 11: \"capture\", 12: \"castle\"}\n",
     "print(\"Maia's move features when it's better:\")\n",
     "for i, (mean, var) in enumerate(zip(mean_vector_maia, variance_vector_maia)):\n",
     "    feature_name = feature_names.get(i, f\"Feature {i}\")\n",
@@ -846,8 +877,6 @@
     "vector_array_leela = np.array(move_feats_leela)\n",
     "mean_vector_leela = np.mean(vector_array_leela, axis=0)\n",
     "variance_vector_leela = np.var(vector_array_leela, axis=0)\n",
-    "feature_names = {0: \"distance\", 1: \"king approach\", 2: \"advance/ retreat\", 3: \"flanking\", 4: \"pawn\", 5: \"rook\",\n",
-    "                      6: \"knight\", 7: \"bishop\", 8: \"queen\", 9: \"king\", 10: \"check\", 11: \"capture\", 12: \"castle\"}\n",
     "print(\"Leela's move features when Maia's move is better:\")\n",
     "for i, (mean, var) in enumerate(zip(mean_vector_leela, variance_vector_leela)):\n",
     "    feature_name = feature_names.get(i, f\"Feature {i}\")\n",
@@ -1125,7 +1154,6 @@
     }
    ],
    "source": [
-    "games_df[\"eval_diff\"] = games_df[\"maia1200_eval\"] - games_df[\"leela10b2500_eval\"]\n",
     "top_samples = games_df.nlargest(5, 'eval_diff')\n",
     "boards = [chess.Board(row['position']) for index, row in top_samples.iterrows()]\n",
     "for index, row in top_samples.iterrows():\n",
@@ -1452,38 +1480,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_after_chosen(total, bot_name):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bot = False\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        cur_ply = row['ply']\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bot = False\n",
+    "            continue\n",
+    "        if row['contributor'] == bot_name:\n",
+    "            if cur_bot:\n",
+    "                ctr += 1\n",
+    "            cur_bot = True\n",
+    "        else:\n",
+    "            cur_bot = False\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Percentage of times Maia is chosen in disagreements: 36.44%\n",
-      "Percentage of times Maia is chosen after it was chosen the previous move: 50.587%\n"
+      "Percentage of times Maia is chosen after it was chosen the previous move: 50.587%\n",
+      "Percentage of times Leela is chosen in disagreements: 63.559%\n",
+      "Percentage of times Leela is chosen after it was chosen the previous move: 60.789%\n"
      ]
     }
    ],
    "source": [
+    "percent_maia = calculate_percent_after_chosen(len(maia_better_df), 'maia1200')\n",
+    "percent_leela = calculate_percent_after_chosen(len(leela_better_df), 'leela10b2500')\n",
     "print(f\"Percentage of times Maia is chosen in disagreements: {(len(maia_df) / len(disagreement_df) * 100).__round__(3)}%\")\n",
-    "\n",
-    "ctr = 0\n",
-    "cur_game = -1\n",
-    "cur_maia = False\n",
-    "for index, row in disagreement_df.iterrows():\n",
-    "    cur_ply = row['ply']\n",
-    "    if cur_game != row['game']:\n",
-    "        cur_game = row['game']\n",
-    "        cur_maia = False\n",
-    "        continue\n",
-    "    if row['contributor'] == 'maia1200':\n",
-    "        if cur_maia:\n",
-    "            ctr += 1\n",
-    "        cur_maia = True\n",
-    "    else:\n",
-    "        cur_maia = False\n",
-    "\n",
-    "percent = (ctr / len(maia_better_df)) * 100\n",
-    "print(f\"Percentage of times Maia is chosen after it was chosen the previous move: {percent.__round__(3)}%\")"
+    "print(f\"Percentage of times Maia is chosen after it was chosen the previous move: {percent_maia.__round__(3)}%\")\n",
+    "print(f\"Percentage of times Leela is chosen in disagreements: {(len(leela_df) / len(disagreement_df) * 100).__round__(3)}%\")\n",
+    "print(f\"Percentage of times Leela is chosen after it was chosen the previous move: {percent_leela.__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def"
    ],
    "metadata": {
     "collapsed": false
