--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "outputs": [
     {
      "name": "stdout",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
    "outputs": [
     {
      "name": "stdout",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 106,
    "outputs": [
     {
      "name": "stdout",
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "outputs": [
     {
      "data": {
       "text/plain": "       maia1200_eval  maia1200_conf  leela10b2500_eval  leela10b2500_conf\ncount   88764.000000   88764.000000       88764.000000       88764.000000\nmean        0.577231       0.865977           0.665955           0.871150\nstd         0.302667       0.177225           0.270509           0.176866\nmin         0.000000       0.200000           0.000000           0.200000\n25%         0.340000       0.800000           0.500000           0.800000\n50%         0.540000       1.000000           0.680000           1.000000\n75%         0.880000       1.000000           0.920000           1.000000\nmax         1.000000       1.000000           1.000000           1.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>maia1200_eval</th>\n      <th>maia1200_conf</th>\n      <th>leela10b2500_eval</th>\n      <th>leela10b2500_conf</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>88764.000000</td>\n      <td>88764.000000</td>\n      <td>88764.000000</td>\n      <td>88764.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.577231</td>\n      <td>0.865977</td>\n      <td>0.665955</td>\n      <td>0.871150</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.302667</td>\n      <td>0.177225</td>\n      <td>0.270509</td>\n      <td>0.176866</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.200000</td>\n      <td>0.000000</td>\n      <td>0.200000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.340000</td>\n      <td>0.800000</td>\n      <td>0.500000</td>\n      <td>0.800000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.540000</td>\n      <td>1.000000</td>\n      <td>0.680000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.880000</td>\n      <td>1.000000</td>\n      <td>0.920000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 69,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 108,
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +202,7 @@
       "text/plain": "       maia1200_eval  maia1200_conf  leela10b2500_eval  leela10b2500_conf\ncount   32346.000000   32346.000000       32346.000000       32346.000000\nmean        0.756683       0.889600           0.584128           0.849379\nstd         0.276748       0.166077           0.306924           0.185017\nmin         0.020000       0.400000           0.000000           0.200000\n25%         0.580000       0.800000           0.360000           0.600000\n50%         0.860000       1.000000           0.580000           1.000000\n75%         1.000000       1.000000           0.880000           1.000000\nmax         1.000000       1.000000           0.980000           1.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>maia1200_eval</th>\n      <th>maia1200_conf</th>\n      <th>leela10b2500_eval</th>\n      <th>leela10b2500_conf</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>32346.000000</td>\n      <td>32346.000000</td>\n      <td>32346.000000</td>\n      <td>32346.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.756683</td>\n      <td>0.889600</td>\n      <td>0.584128</td>\n      <td>0.849379</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.276748</td>\n      <td>0.166077</td>\n      <td>0.306924</td>\n      <td>0.185017</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.020000</td>\n      <td>0.400000</td>\n      <td>0.000000</td>\n      <td>0.200000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.580000</td>\n      <td>0.800000</td>\n      <td>0.360000</td>\n      <td>0.600000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.860000</td>\n      <td>1.000000</td>\n      <td>0.580000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>0.880000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>0.980000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 70,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
    "outputs": [
     {
      "name": "stdout",
@@ -236,7 +236,7 @@
       "text/plain": "       maia1200_eval  maia1200_conf  leela10b2500_eval  leela10b2500_conf\ncount   56418.000000   56418.000000       56418.000000       56418.000000\nmean        0.474346       0.852434           0.712869           0.883633\nstd         0.266778       0.181934           0.234694           0.170773\nmin         0.000000       0.200000           0.020000           0.200000\n25%         0.280000       0.800000           0.540000           0.800000\n50%         0.440000       1.000000           0.720000           1.000000\n75%         0.660000       1.000000           0.940000           1.000000\nmax         0.980000       1.000000           1.000000           1.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>maia1200_eval</th>\n      <th>maia1200_conf</th>\n      <th>leela10b2500_eval</th>\n      <th>leela10b2500_conf</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>56418.000000</td>\n      <td>56418.000000</td>\n      <td>56418.000000</td>\n      <td>56418.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.474346</td>\n      <td>0.852434</td>\n      <td>0.712869</td>\n      <td>0.883633</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.266778</td>\n      <td>0.181934</td>\n      <td>0.234694</td>\n      <td>0.170773</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.200000</td>\n      <td>0.020000</td>\n      <td>0.200000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.280000</td>\n      <td>0.800000</td>\n      <td>0.540000</td>\n      <td>0.800000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.440000</td>\n      <td>1.000000</td>\n      <td>0.720000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.660000</td>\n      <td>1.000000</td>\n      <td>0.940000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>0.980000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 71,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 110,
    "outputs": [
     {
      "name": "stdout",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 111,
    "outputs": [
     {
      "name": "stdout",
@@ -343,77 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 112,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_59425/3150342384.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_59425/2503335194.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  disagreement_df['dis_num'] = 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         game  ply  move   contributor  adversary  color  \\\n",
-      "1           0    2  f2f4  leela10b2500  stockfish  white   \n",
-      "2           0    4  c3d5  leela10b2500  stockfish  white   \n",
-      "4           0    8  c1d2  leela10b2500  stockfish  white   \n",
-      "6           0   12  e2f3  leela10b2500  stockfish  white   \n",
-      "8           0   16  a1c1  leela10b2500  stockfish  white   \n",
-      "...       ...  ...   ...           ...        ...    ...   \n",
-      "342998  12931   47  c5e6  leela10b2500  stockfish  black   \n",
-      "343002  12931   55  g4g5  leela10b2500  stockfish  black   \n",
-      "343009  12931   69  g7g5      maia1200  stockfish  black   \n",
-      "343010  12931   71  e6f4      maia1200  stockfish  black   \n",
-      "343015  12931   81  h5h4      maia1200  stockfish  black   \n",
-      "\n",
-      "                                                 position result  \\\n",
-      "1       rq2k2r/p2p1ppp/1pbbpn2/8/2P1P3/P1N5/1PQ1BPPP/R...   lose   \n",
-      "2       rq2k2r/p2p1ppp/1pbb1n2/4p3/2P1PP2/P1N5/1PQ1B1P...   lose   \n",
-      "4       rq2k2r/p2p1ppp/1p1b1n2/3P4/4Pp2/P7/1PQ1B1PP/R1...   lose   \n",
-      "6       rq3rk1/p2p1ppp/1p3n2/3Pb3/4Pp2/P1B5/1PQ1B1PP/R...   lose   \n",
-      "8       rqr3k1/p4ppp/1p1p1n2/3Pb3/4Pp2/P1BQ1B2/1P4PP/R...   lose   \n",
-      "...                                                   ...    ...   \n",
-      "342998  6k1/5pp1/2p4p/2n5/2R3P1/1r3N2/5P1P/6K1 b - - 1 24    win   \n",
-      "343002    6k1/3N1pp1/4n2p/2p5/6r1/2R5/5P1P/5K2 b - - 1 28    win   \n",
-      "343009          8/5pp1/3Nnk1p/2p5/4K3/8/5P1P/8 b - - 6 35    win   \n",
-      "343010          8/5p2/3Nnk1p/2pK2p1/8/8/5P1P/8 b - - 1 36    win   \n",
-      "343015         8/5p2/4n1k1/2pK2pp/2N5/8/5P1P/8 b - - 5 41    win   \n",
-      "\n",
-      "       maia1200_move  maia1200_eval  maia1200_conf leela10b2500_move  \\\n",
-      "1               g2g3           0.22            1.0              f2f4   \n",
-      "2               f4f5           0.52            1.0              c3d5   \n",
-      "4               c1f4           0.10            1.0              c1d2   \n",
-      "6               c3e5           0.08            1.0              e2f3   \n",
-      "8               c3e5           0.26            0.8              a1c1   \n",
-      "...              ...            ...            ...               ...   \n",
-      "342998          b3f3           0.82            1.0              c5e6   \n",
-      "343002          c5c4           0.64            1.0              g4g5   \n",
-      "343009          g7g5           0.96            1.0              h6h5   \n",
-      "343010          e6f4           1.00            1.0              h6h5   \n",
-      "343015          h5h4           1.00            0.6              g6f6   \n",
-      "\n",
-      "        leela10b2500_eval  leela10b2500_conf  dis_num  \n",
-      "1                    0.48                1.0        1  \n",
-      "2                    0.54                0.8        2  \n",
-      "4                    0.40                1.0        3  \n",
-      "6                    0.62                0.8        4  \n",
-      "8                    0.52                1.0        5  \n",
-      "...                   ...                ...      ...  \n",
-      "342998               0.94                1.0       15  \n",
-      "343002               0.92                1.0       16  \n",
-      "343009               0.88                0.8       17  \n",
-      "343010               0.98                0.6       18  \n",
-      "343015               0.96                0.4       19  \n",
-      "\n",
-      "[88764 rows x 15 columns]\n"
      ]
     }
    ],
@@ -426,8 +367,7 @@
     "    if row['game'] != cur_game:\n",
     "        cur_game = row['game']\n",
     "        cur_count = 1\n",
-    "    disagreement_df.loc[ind, 'dis_num'] = cur_count\n",
-    "print(disagreement_df)"
+    "    disagreement_df.loc[ind, 'dis_num'] = cur_count"
    ],
    "metadata": {
     "collapsed": false
@@ -435,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 113,
    "outputs": [
     {
      "data": {
@@ -460,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 114,
    "outputs": [
     {
      "name": "stderr",
@@ -484,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 115,
    "outputs": [
     {
      "name": "stderr",
@@ -564,13 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 116,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0, 0.5, 'Mean Confidence')"
      },
-     "execution_count": 78,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -613,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 117,
    "outputs": [
     {
      "data": {
@@ -680,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 118,
    "outputs": [
     {
      "name": "stdout",
@@ -757,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 119,
    "outputs": [
     {
      "name": "stdout",
@@ -834,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 120,
    "outputs": [
     {
      "name": "stdout",
@@ -910,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "def calculate_mean_of_board_feats(df):\n",
@@ -930,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 122,
    "outputs": [
     {
      "name": "stderr",
@@ -1034,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 123,
    "outputs": [
     {
      "name": "stdout",
@@ -1121,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 124,
    "outputs": [
     {
      "name": "stdout",
@@ -1165,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 125,
    "outputs": [
     {
      "name": "stdout",
@@ -1207,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 126,
    "outputs": [
     {
      "name": "stdout",
@@ -1249,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 127,
    "outputs": [
     {
      "name": "stdout",
@@ -1291,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 128,
    "outputs": [
     {
      "name": "stdout",
@@ -1335,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 129,
    "outputs": [
     {
      "name": "stdout",
@@ -1379,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 130,
    "outputs": [
     {
      "data": {
@@ -1478,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 131,
    "outputs": [
     {
      "name": "stdout",
@@ -1585,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 132,
    "outputs": [
     {
      "name": "stdout",
@@ -1615,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 133,
    "outputs": [
     {
      "name": "stdout",
@@ -1713,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 134,
    "outputs": [
     {
      "name": "stdout",
@@ -1734,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 135,
    "outputs": [
     {
      "name": "stderr",
@@ -1775,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 136,
    "outputs": [
     {
      "data": {
@@ -1804,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 137,
    "outputs": [
     {
      "name": "stderr",
@@ -1844,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 138,
    "outputs": [
     {
      "data": {
@@ -1882,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 139,
    "outputs": [],
    "source": [
     "def calculate_percent_after_chosen(total, bot_name):\n",
@@ -1909,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 140,
    "outputs": [
     {
      "name": "stdout",
